...
    <string name="download">Get Selected</string>
    <string name="download_forms_result">Download Results</string>
    <string name="downloading_data">Connecting to Server</string>
    <string name="do_not_change">Cancel</string>
    <string name="do_not_exit">Cancel</string>
    <string name="do_not_save">Ignore Changes</string>
    <string name="enter_data">Fill Blank Form</string>
    <string name="enter_data_button">Fill Blank Form</string>
    <string name="error_occured">Error Occurred</string>
    <string name="error_attaching_binary_file">An error occurred while attaching the media: %s</string>
    <string name="fetching_file">Getting %1$s.\n\nForm %2$s of %3$s form(s).</string>
    <string name="file_deleted_error">Sorry, %1$s of %2$s selected form(s) failed to delete!</string>
    <string name="file_deleted_ok">%s form(s) successfully deleted!</string>
...
    <string name="get_forms">Get Blank Form</string>
    <string name="get_location">Record Location</string>
    <string name="provider_disabled_error">Sorry, Location providers are disabled!</string>
    <string name="invalid_answer_error">Sorry, this response is invalid!</string>
    <string name="invalid_space_in_answer_singular">Warning: underlying value %s has spaces</string>
    <string name="invalid_space_in_answer_plural">Warning: underlying values %s have spaces</string>
    <string name="jump_to_beginning">Go To Start</string>
    <string name="jump_to_end">Go To End</string>
    <string name="jump_to_previous">Go Up</string>
    <string name="loading_form">Loading Form</string>
    <string name="load_remote_form_error">Form list download failed</string>
    <string name="location_accuracy">Accuracy: %1$s m</string>
    <string name="location_provider">Location provider: %s</string>
...
    <string name="noselect_error">Sorry, you have not selected any forms!</string>
    <string name="no_connection">No network connection available</string>
    <string name="no_items_display">Nothing available to display.</string>
    <string name="no_items_display_forms">Nothing available to display.\n\nTry getting and filling out a blank form.</string>
    <string name="no_items_display_sent_forms">Nothing available to display.\n\nTry sending finalized forms before viewing.</string>
    <string name="no_items_display_instances">Nothing available to display.\n\nTry finalizing saved forms before sending.</string>
    <string name="ok">OK</string>
    <string name="parse_error">Sorry, unable to parse form.</string>
    <string name="password">Password</string>
    <string name="play_video">Play Video</string>
    <string name="please_wait">Please wait a few moments.</string>
    <string name="please_wait_long">Please wait. This could take a few minutes.</string>
    <string name="quit_application">Exit %s</string>
...
    <string name="sent_on_date_at_time">\'Sent:\' HH:mm, EEE, MMM dd, yyyy</string> <!-- http://docs.oracle.com/javase/6/docs/api/java/text/SimpleDateFormat.html -->
    <string name="sending_failed_on_date_at_time">\'Sending failed:\' HH:mm, EEE, MMM dd, yyyy</string> <!-- http://docs.oracle.com/javase/6/docs/api/java/text/SimpleDateFormat.html -->
    <string name="deleted_on_date_at_time">\'Deleted:\' HH:mm, EEE, MMM dd, yyyy</string>
    <string name="submission_deleted">Submission deleted</string>
    <string name="version">Version:</string>
    <string name="parent_form_not_present">Unable to edit this saved form because the corresponding blank form is not present or was deleted.\n\nForm ID: %1$s</string>
    <string name="launch_app">Launch</string>
    <string name="no_app">The requested app is not installed</string>
    <string name="select_one">Select One Answer</string>
    <string name="savepoint_used">Unsaved changes recovered from savepoint!</string>
    <string name="save_and_close">Save and Close</string>
    <string name="sign_button">Gather Signature</string>
    <string name="markup_image">Markup Image</string>
...
    <string name="admin_password_incorrect">Sorry, password is incorrect!</string>
    <string name="enter_admin_password">Enter Admin Password</string>
    <string name="change_admin_password">Change Admin Password</string>
    <string name="autosend">Auto send</string>
    <string name="found_in_main">Uncheck to hide from Main Menu</string>
    <string name="found_in_settings">Uncheck to hide from General Settings</string>
    <string name="form_forward">Next</string>
    <string name="form_backward">Back</string>
    <string name="navigation">Navigation</string>
    <string name="swipe_navigation">Use horizontal swipes</string>
    <string name="buttons_navigation">Use forward/backward buttons</string>
    <string name="swipe_buttons_navigation">Use swipes and buttons</string>
    <string name="launch_printer">Initiate Printing</string>
...
    <string name="email">Email address</string>
    <string name="user_defined">User-defined</string>
    <string name="device_defined">Device-defined</string>
    <string name="device_id">Device ID</string>
    <string name="subscriber_id">Subscriber ID</string>
    <string name="sim_serial_id">SIM serial number</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="no_date_selected">No date selected</string>
    <string name="no_time_selected">No time selected</string>
    <string name="configure_via_qr_code">Configure via QR code</string>
    <string name="qr_code">QR code configuration</string>
    <string name="scan_qr_code_fragment_title">Scan</string>
...
