...
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/questionholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttonholder"
        android:layout_below="@id/appBarLayout" />

    <ImageView
        android:id="@+id/shadow_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/form_forward_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/app_bar"
            android:clickable="true"
            android:contentDescription="@string/form_forward"
            android:drawableEnd="@drawable/ic_navigate_forward_wrapped"
...
