...
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="other">Other</string>
    <string name="info">Info</string>
    <string name="sign_in_to_account">Sign in to your KoBoToolbox account</string>
    <string name="forgot">Forgot?</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_username">Please enter a username</string>
    <string name="enter_password">Please enter a password</string>
    <string name="create_new_account">or create an account</string>
    <string name="delete">Delete</string>
    <string name="delete_forms">Delete Blank or Saved Forms</string>
    <string name="server_credentials">Server credentials</string>
...
